Changes and optimization
Optimizing code, fixing different_event and adding "ws-rotate_shape" event

--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataEvents = pd.read_csv('/Users/pedroantonio/Desktop/anonamyze_all_data_collection.csv', sep=\";\")"
+    "dataEvents = pd.read_csv('/Users/pedroantonio/Desktop/TFG/notebooks/anonamyze_all_data_collection.csv', sep=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,179 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>group</th>\n",
-       "      <th>user</th>\n",
-       "      <th>task_id</th>\n",
-       "      <th>metric</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>1. One Box</td>\n",
-       "      <td>event</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>2. Separated Boxes</td>\n",
-       "      <td>event</td>\n",
-       "      <td>28.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>3. Rotate a Pyramid</td>\n",
-       "      <td>event</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>4. Match Silhouettes</td>\n",
-       "      <td>event</td>\n",
-       "      <td>173.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>5. Removing Objects</td>\n",
-       "      <td>event</td>\n",
-       "      <td>38.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56191</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56192</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Tall and Small</td>\n",
-       "      <td>redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56193</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Unnecessary</td>\n",
-       "      <td>redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56194</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Warm Up</td>\n",
-       "      <td>redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56195</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Zzz</td>\n",
-       "      <td>redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>56196 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  group                              user  \\\n",
-       "0      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "1      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "2      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "3      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "4      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "...                                 ...                               ...   \n",
-       "56191  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "56192  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "56193  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "56194  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "56195  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "\n",
-       "                    task_id       metric  value  \n",
-       "0                1. One Box        event   18.0  \n",
-       "1        2. Separated Boxes        event   28.0  \n",
-       "2       3. Rotate a Pyramid        event   12.0  \n",
-       "3      4. Match Silhouettes        event  173.0  \n",
-       "4       5. Removing Objects        event   38.0  \n",
-       "...                     ...          ...    ...  \n",
-       "56191           Sugar Cones  redo_action    0.0  \n",
-       "56192        Tall and Small  redo_action    0.0  \n",
-       "56193           Unnecessary  redo_action    0.0  \n",
-       "56194               Warm Up  redo_action    0.0  \n",
-       "56195                   Zzz  redo_action    0.0  \n",
-       "\n",
-       "[56196 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "levelsOfActivity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def computeLevelsOfActivity(dataEvents, group = 'all'):\n",
+    "    \n",
     "    dataEvents['time'] = pd.to_datetime(dataEvents['time'])\n",
     "    dataEvents = dataEvents.sort_values('time')\n",
     "    \n",
@@ -239,20 +83,17 @@
     "    \n",
     "    #indicate the index variable                                                                                                                                                               \n",
     "    activity_by_user.index = activity_by_user['group_user_task_id'].values\n",
-    "                                                                                              \n",
+    "    \n",
+    "    typeEvents = ['ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action']\n",
+    "    \n",
+    "   \n",
+    "        \n",
     "    #initialize the metrics                                                                                          \n",
     "    activity_by_user['event'] = np.nan\n",
     "    activity_by_user['different_events'] = np.nan\n",
     "    activity_by_user['active_time'] = np.nan\n",
-    "    activity_by_user['snapshot'] = 0\n",
-    "    activity_by_user['paint'] = 0\n",
-    "    activity_by_user['rotate_view'] = 0\n",
-    "    activity_by_user['move_shape'] = 0\n",
-    "    activity_by_user['scale_shape'] = 0\n",
-    "    activity_by_user['create_shape'] = 0\n",
-    "    activity_by_user['delete_shape'] = 0\n",
-    "    activity_by_user['undo_action'] = 0\n",
-    "    activity_by_user['redo_action'] = 0\n",
+    "    for event in typeEvents:\n",
+    "        activity_by_user[event] = 0\n",
     "    \n",
     "    #initialize the data structures\n",
     "    userFunnelDict = dict()  \n",
@@ -261,11 +102,9 @@
     "    eventsDiff_puzzle = dict()\n",
     "    timePuzzle = dict()\n",
     "    globalTypesEvents = dict()\n",
-    "    typesEvents = dict()\n",
+    "    #typesEvents = dict()\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "      \n",
     "    for user in dataEvents['group_user_id'].unique():\n",
     "        \n",
     "        # Computing active time\n",
@@ -287,29 +126,19 @@
     "                \n",
     "                #create id: group+user+task_id                                                                              \n",
     "                user_puzzle_key = event['group'] + '~' + event['user'] + '~' + json.loads(event['data'])['task_id']\n",
-    "                \n",
+    "                        \n",
     "                # initialize if the id is new                                                                              \n",
     "                if(user_puzzle_key not in puzzleEvents.keys()):\n",
     "                    puzzleEvents[user_puzzle_key]= 1\n",
     "                    eventsDiff_puzzle[user_puzzle_key] = []\n",
-    "                    timePuzzle[user_puzzle_key] = 0\n",
-    "                    \n",
-    "                    globalTypesEvents[user_puzzle_key] = dict()\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-snapshot'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-paint'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-rotate_view'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-move_shape'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-scale_shape'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-create_shape'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-delete_shape'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-undo_action'] = 0\n",
-    "                    globalTypesEvents[user_puzzle_key]['ws-redo_action'] = 0\n",
-    "                    \n",
     "                    eventsDiff_puzzle[user_puzzle_key].append(event['type'])\n",
-    "                    \n",
+    "                    timePuzzle[user_puzzle_key] = 0\n",
+    "                    globalTypesEvents[user_puzzle_key] = dict()\n",
+    "                    for ev in typeEvents:\n",
+    "                        globalTypesEvents[user_puzzle_key][ev]= 0\n",
+    "            \n",
     "            # the event is not final event\n",
     "            if(event['type'] not in ['ws-exit_to_menu', 'ws-puzzle_complete', 'ws-create_user', 'ws-login_user']): \n",
-    "                                                       \n",
     "                    puzzleEvents[user_puzzle_key] += 1\n",
     "                                                                                              \n",
     "                    #add the event type                                                                          \n",
@@ -322,29 +151,16 @@
     "\n",
     "                    previousEvent = event \n",
     "                    \n",
-    "                    #update event counters by type                                                                          \n",
-    "                    if(event['type'] == 'ws-snapshot'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-snapshot'] +=1\n",
-    "                    elif(event['type'] == 'ws-rotate_view'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-rotate_view'] +=1 \n",
-    "                    elif(event['type'] == 'ws-paint'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-paint'] +=1 \n",
-    "                    elif(event['type'] == 'ws-move_shape'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-move_shape'] +=1 \n",
-    "                    elif(event['type'] == 'ws-scale_shape'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-scale_shape'] +=1 \n",
-    "                    elif(event['type'] == 'ws-create_shape'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-create_shape'] +=1\n",
-    "                    elif(event['type'] == 'ws-delete_shape'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-delete_shape'] +=1\n",
-    "                    elif(event['type'] == 'ws-undo_action'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-undo_action'] +=1\n",
-    "                    elif(event['type'] == 'ws-redo_action'):\n",
-    "                        globalTypesEvents[user_puzzle_key]['ws-redo_action'] +=1    \n",
+    "                    #update event counters by type\n",
+    "                    if(event['type'] in typeEvents):\n",
+    "                        globalTypesEvents[user_puzzle_key][event['type']] +=1\n",
+    "                    \n",
     "                        \n",
     "            # the puzzle ends        \n",
     "            if(event['type'] in ['ws-exit_to_menu', 'ws-puzzle_complete']):\n",
-    "                                                                                              \n",
+    "                    \n",
+    "                    puzzleEvents[user_puzzle_key] += 1\n",
+    "                    \n",
     "                    #add the event type                                                                         \n",
     "                    eventsDiff_puzzle[user_puzzle_key].append(event['type'])\n",
     "                    \n",
@@ -354,7 +170,7 @@
     "                        timePuzzle[user_puzzle_key] += delta_seconds\n",
     "\n",
     "                    previousEvent = event\n",
-    "                    \n",
+    "    \n",
     "    # add the data by group_user_task_id            \n",
     "    for i in dataEvents['group_user_task_id'].unique():\n",
     "        key_split = i.split('~')\n",
@@ -362,18 +178,9 @@
     "            activity_by_user.at[i, 'event'] = puzzleEvents[i]\n",
     "            activity_by_user.at[i, 'different_events'] = len(set(eventsDiff_puzzle[i]))\n",
     "            activity_by_user.at[i, 'active_time'] = timePuzzle[i]\n",
-    "            activity_by_user.at[i, 'snapshot'] = globalTypesEvents[i]['ws-snapshot']\n",
-    "            activity_by_user.at[i, 'paint'] = globalTypesEvents[i]['ws-paint']\n",
-    "            activity_by_user.at[i, 'rotate_view'] = globalTypesEvents[i]['ws-rotate_view']\n",
-    "            activity_by_user.at[i, 'move_shape'] = globalTypesEvents[i]['ws-move_shape']\n",
-    "            activity_by_user.at[i, 'scale_shape'] = globalTypesEvents[i]['ws-scale_shape']\n",
-    "            activity_by_user.at[i, 'create_shape'] = globalTypesEvents[i]['ws-create_shape']\n",
-    "            activity_by_user.at[i, 'delete_shape'] = globalTypesEvents[i]['ws-delete_shape']\n",
-    "            activity_by_user.at[i, 'undo_action'] = globalTypesEvents[i]['ws-undo_action']\n",
-    "            activity_by_user.at[i, 'redo_action'] = globalTypesEvents[i]['ws-redo_action']\n",
-    "            \n",
-    "    \n",
-    "    \n",
+    "            for event in typeEvents:\n",
+    "                activity_by_user.at[i, event] = globalTypesEvents[i][event]\n",
+    "\n",
     "    #delete row with NaN\n",
     "    activity_by_user.dropna(inplace=True)\n",
     "    #delete group_user_task_id column\n",
@@ -381,7 +188,7 @@
     "    \n",
     "    #data output preparation                                                                                          \n",
     "    activity_by_user = pd.melt(activity_by_user, id_vars=['group', 'user','task_id'], \n",
-    "        value_vars=['event','different_events', 'active_time','snapshot','paint','rotate_view','move_shape','scale_shape','create_shape','delete_shape','undo_action','redo_action'], \n",
+    "        value_vars=['event','different_events', 'active_time','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action'], \n",
     "        var_name='metric', value_name='value')\n",
     "        \n",
     "    return activity_by_user\n",
