Total time and inactive time

--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>group</th>\n",
+       "      <th>user</th>\n",
+       "      <th>task_id</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>event</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>2. Separated Boxes</td>\n",
+       "      <td>event</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>3. Rotate a Pyramid</td>\n",
+       "      <td>event</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>4. Match Silhouettes</td>\n",
+       "      <td>event</td>\n",
+       "      <td>175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>5. Removing Objects</td>\n",
+       "      <td>event</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60874</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>ws-redo_action</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60875</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Tall and Small</td>\n",
+       "      <td>ws-redo_action</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60876</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Unnecessary</td>\n",
+       "      <td>ws-redo_action</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60877</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Warm Up</td>\n",
+       "      <td>ws-redo_action</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60878</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
+       "      <td>Zzz</td>\n",
+       "      <td>ws-redo_action</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>60879 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  group                              user  \\\n",
+       "0      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "1      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "2      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "3      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "4      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "...                                 ...                               ...   \n",
+       "60874  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "60875  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "60876  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "60877  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "60878  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "\n",
+       "                    task_id          metric  value  \n",
+       "0                1. One Box           event   20.0  \n",
+       "1        2. Separated Boxes           event   30.0  \n",
+       "2       3. Rotate a Pyramid           event   14.0  \n",
+       "3      4. Match Silhouettes           event  175.0  \n",
+       "4       5. Removing Objects           event   40.0  \n",
+       "...                     ...             ...    ...  \n",
+       "60874           Sugar Cones  ws-redo_action    0.0  \n",
+       "60875        Tall and Small  ws-redo_action    0.0  \n",
+       "60876           Unnecessary  ws-redo_action    0.0  \n",
+       "60877               Warm Up  ws-redo_action    0.0  \n",
+       "60878                   Zzz  ws-redo_action    0.0  \n",
+       "\n",
+       "[60879 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "levelsOfActivity"
    ]
