Time total, inactive time and submit events

--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,179 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>group</th>\n",
-       "      <th>user</th>\n",
-       "      <th>task_id</th>\n",
-       "      <th>metric</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>1. One Box</td>\n",
-       "      <td>event</td>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>2. Separated Boxes</td>\n",
-       "      <td>event</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>3. Rotate a Pyramid</td>\n",
-       "      <td>event</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>4. Match Silhouettes</td>\n",
-       "      <td>event</td>\n",
-       "      <td>175.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
-       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
-       "      <td>5. Removing Objects</td>\n",
-       "      <td>event</td>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60874</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>ws-redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60875</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Tall and Small</td>\n",
-       "      <td>ws-redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60876</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Unnecessary</td>\n",
-       "      <td>ws-redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60877</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Warm Up</td>\n",
-       "      <td>ws-redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60878</td>\n",
-       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
-       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
-       "      <td>Zzz</td>\n",
-       "      <td>ws-redo_action</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>60879 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  group                              user  \\\n",
-       "0      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "1      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "2      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "3      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "4      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
-       "...                                 ...                               ...   \n",
-       "60874  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "60875  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "60876  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "60877  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "60878  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
-       "\n",
-       "                    task_id          metric  value  \n",
-       "0                1. One Box           event   20.0  \n",
-       "1        2. Separated Boxes           event   30.0  \n",
-       "2       3. Rotate a Pyramid           event   14.0  \n",
-       "3      4. Match Silhouettes           event  175.0  \n",
-       "4       5. Removing Objects           event   40.0  \n",
-       "...                     ...             ...    ...  \n",
-       "60874           Sugar Cones  ws-redo_action    0.0  \n",
-       "60875        Tall and Small  ws-redo_action    0.0  \n",
-       "60876           Unnecessary  ws-redo_action    0.0  \n",
-       "60877               Warm Up  ws-redo_action    0.0  \n",
-       "60878                   Zzz  ws-redo_action    0.0  \n",
-       "\n",
-       "[60879 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "levelsOfActivity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def computeLevelsOfActivity(dataEvents, group = 'all'):\n",
+    "\n",
     "    \n",
     "    dataEvents['time'] = pd.to_datetime(dataEvents['time'])\n",
     "    dataEvents = dataEvents.sort_values('time')\n",
@@ -241,11 +85,13 @@
     "    #indicate the index variable                                                                                                                                                               \n",
     "    activity_by_user.index = activity_by_user['group_user_task_id'].values\n",
     "    \n",
-    "    typeEvents = ['ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action']\n",
+    "    typeEvents = ['ws-snapshot','ws-paint', 'ws-rotate_view','ws-move_shape','ws-rotate_shape' ,'ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action', 'ws-check_solution']\n",
     "    \n",
     "   \n",
     "        \n",
-    "    #initialize the metrics                                                                                          \n",
+    "    #initialize the metrics  \n",
+    "    activity_by_user['timeTotal'] = np.nan\n",
+    "    activity_by_user['inactive_time'] = np.nan\n",
     "    activity_by_user['event'] = np.nan\n",
     "    activity_by_user['different_events'] = np.nan\n",
     "    activity_by_user['active_time'] = np.nan\n",
@@ -259,7 +105,8 @@
     "    eventsDiff_puzzle = dict()\n",
     "    timePuzzle = dict()\n",
     "    globalTypesEvents = dict()\n",
-    "    #typesEvents = dict()\n",
+    "    eventInitial = dict()\n",
+    "    totalTime = dict()\n",
     "    \n",
     "      \n",
     "    for user in dataEvents['group_user_id'].unique():\n",
@@ -283,9 +130,13 @@
     "                \n",
     "                #create id: group+user+task_id                                                                              \n",
     "                user_puzzle_key = event['group'] + '~' + event['user'] + '~' + json.loads(event['data'])['task_id']\n",
-    "                        \n",
+    "                \n",
+    "                #if(user_puzzle_key not in eventInitial.keys()):\n",
+    "                eventInitial[user_puzzle_key] = event['time']\n",
+    "                       \n",
     "                # initialize if the id is new                                                                              \n",
     "                if(user_puzzle_key not in puzzleEvents.keys()):\n",
+    "                    totalTime[user_puzzle_key] = 0\n",
     "                    puzzleEvents[user_puzzle_key]= 1\n",
     "                    eventsDiff_puzzle[user_puzzle_key] = []\n",
     "                    eventsDiff_puzzle[user_puzzle_key].append(event['type'])\n",
@@ -316,6 +167,12 @@
     "            # the puzzle ends        \n",
     "            if(event['type'] in ['ws-exit_to_menu', 'ws-puzzle_complete']):\n",
     "                    \n",
+    "                    # Total time\n",
+    "                    if(totalTime[user_puzzle_key] == 0):\n",
+    "                        totalTime[user_puzzle_key] = (event['time'] - eventInitial[user_puzzle_key]).total_seconds()\n",
+    "                    else: \n",
+    "                        totalTime[user_puzzle_key] += (event['time'] - eventInitial[user_puzzle_key]).total_seconds()                       \n",
+    "                \n",
     "                    puzzleEvents[user_puzzle_key] += 1\n",
     "                    \n",
     "                    #add the event type                                                                         \n",
@@ -325,6 +182,7 @@
     "                    delta_seconds = (event['time'] - previousEvent['time']).total_seconds()\n",
     "                    if((delta_seconds < theresHoldActivity)):\n",
     "                        timePuzzle[user_puzzle_key] += delta_seconds\n",
+    "                        \n",
     "\n",
     "                    previousEvent = event\n",
     "    \n",
@@ -332,6 +190,8 @@
     "    for i in dataEvents['group_user_task_id'].unique():\n",
     "        key_split = i.split('~')\n",
     "        if(key_split[2] != ''):\n",
+    "            activity_by_user.at[i, 'timeTotal'] = totalTime[i]\n",
+    "            activity_by_user.at[i, 'inactive_time'] = totalTime[i]-timePuzzle[i]\n",
     "            activity_by_user.at[i, 'event'] = puzzleEvents[i]\n",
     "            activity_by_user.at[i, 'different_events'] = len(set(eventsDiff_puzzle[i]))\n",
     "            activity_by_user.at[i, 'active_time'] = timePuzzle[i]\n",
@@ -345,11 +205,10 @@
     "    \n",
     "    #data output preparation                                                                                          \n",
     "    activity_by_user = pd.melt(activity_by_user, id_vars=['group', 'user','task_id'], \n",
-    "        value_vars=['event','different_events', 'active_time','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action'], \n",
+    "        value_vars=['timeTotal','inactive_time','event','different_events', 'active_time','ws-snapshot','ws-paint','ws-rotate_view','ws-rotate_shape','ws-move_shape','ws-scale_shape','ws-create_shape','ws-delete_shape','ws-undo_action','ws-redo_action','ws-check_solution'], \n",
     "        var_name='metric', value_name='value')\n",
     "        \n",
-    "    return activity_by_user\n",
-    "\n"
+    "    return activity_by_user"
    ]
   },
   {
